# Design-Patterns

./: .gitignore  CMakeLists.txt
Decorator/: CMakeLists.txt
Decorator/include/: CCashContext.h  CCashModule.h  CCashModule_Base.h  CashTypeEnum.h
Decorator/src/: main.cpp
Definition/: EnumClassCast.h
Factory/: CMakeLists.txt
Factory/Sale/: CCashModule.cpp  ISale.h
Factory/SaleFactory/: CCashAdvancedModule.cpp  CCashAdvancedModule.h  IFactory.h
Factory/include/: CCashContext.h
Factory/src/: main.cpp
Simple_Factory/: CMakeLists.txt
Simple_Factory/include/: CCashFactory.h  CCashModule.h  CashTypeEnum.h
Simple_Factory/src/: main.cpp
Strategy/: CMakeLists.txt
Strategy/include/: CCashContext.h  CCashModule.h  CCashModule_Base.h  ICashModule.h
Strategy/src/: CCashModule.cpp  main.cpp
